--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_BASE_URL=https://www.swiggy.com/dapi/
+REACT_APP_IMAGE_URL=https://res.cloudinary.com/swiggy/image/upload/fl_lossy,f_auto,q_auto,w_520,h_520/
